# OSMManager

./: CMakeLists.txt  README.md
include/: coordinatesconverter.h  node.h  object.h  relation.h  root.h  types.h  utils.h  way.h
minSizeRel/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  OSMManager.cbp  OSMManager_Test  cmake_install.cmake  qtcsettings.cmake
minSizeRel/.cmake/api/v1/reply/: cache-v2-35b998552d7d3cdab3e3.json  cmakeFiles-v1-8a40d4b1ecfd44bb5cca.json  codemodel-v2-d0489ec05341d87176bf.json  index-2023-09-06T13-50-31-0122.json  target-OSMManager-MinSizeRel-f6ead0508790b44362a1.json  target-OSMManager_Test-MinSizeRel-00a4c3fc39366c336d10.json
minSizeRel/.cmake/api/v1/reply.prev/: cache-v2-56ee04dccce0e1941490.json  cmakeFiles-v1-6bb7d2ee9a4d827faa50.json  directory-.-MinSizeRel-ff4a45cdfe2fd84b4de8.json  index-2023-09-06T13-50-23-0697.json
minSizeRel/.qtc_clangd/: compile_commands.json
minSizeRel/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.3FD9E500DA8BC351.idx  align.h.39AE23050B3DB93E.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.9E55EAC1E221125A.idx  array.D8DE39B4581540F3.idx  atomic_base.h.F118387B313E4F7F.idx  auto_ptr.h.6C881C0DF274EBDF.idx  basic_ios.h.86E7EC2143FBA4A5.idx  basic_ios.tcc.1451CA66F402B867.idx  bitset.F5A2F5EF8BFFC6A0.idx  climits.BFA0F129924BC847.idx  coordinatesconverter.cpp.4A4913488F546B04.idx  coordinatesconverter.h.D1615C92B3291457.idx  cstdarg.6F8FF78D8A7DE03C.idx  cstddef.337D34E624285F88.idx  cstdint.131423F6DD978BF6.idx  cstdlib.3F00BA73B29BCEDF.idx  ctime.B529F9448D24C25D.idx  cxxabi_init_exception.h.430CE6EB8B5EC125.idx  deque.ADD734C582202EEC.idx  deque.tcc.500685878D98734D.idx  fstream.0D712D768CE266DA.idx  fstream.tcc.46C9EF270A1E4625.idx  istream.08C1169ABB1C2256.idx  istream.tcc.A9DD1B6DC1D8CD61.idx  limits.h.5E40AFDF63AD05C0.idx  locale.h.5F1EA2E91D0CD92F.idx  locale_classes.h.0037C8A4EBF36E2B.idx  locale_classes.tcc.DC599615D616917E.idx  (+76 more)
minSizeRel/pkg/: osmmanager-config-version.cmake  osmmanager-config.cmake
pkg/: osmmanager-config-version.cmake.in  osmmanager-config.cmake.in
src/: coordinatesconverter.cpp  main.cpp  node.cpp  object.cpp  relation.cpp  root.cpp  way.cpp
